[package]
name = "aves_ir"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
ipc-channel = "0.19.0"
mitosis = { git = "https://github.com/samuel-skean/mitosis", rev = "13caf99987d2cc41992f2ccdee4ea0fcb45e3655" }
nom = "7.1.3"
serde = "1.0.215"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.2.2"
